[package]
name = "unts"
version = "0.1.0"
edition = "2021"
authors = ["UnknownRori <68576836+UnknownRori@users.noreply.github.com>"]
description = "Simple notes management app that uses mysql as storage bulk"
license = "MIT"
repository = "https://github.com/UnknownRori/unts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
directories = "5.0.1"
thiserror = "1.0.40"
clap = "4.3.0"
chrono = "0.4.24"
serde = { version = "1.0.163", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "chrono", "uuid", "macros" , "mysql" ] }
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]